// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders a single paragraph 1`] = `
<Text>
  This is the text for paragraph one
</Text>
`;

exports[`2. renders multiple paragraphs 1`] = `
<View>
  <Text>
    This is the text for paragraph one
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
</View>
`;

exports[`3. renders multiple paragraphs with a pull quote 1`] = `
<View>
  <Text>
    This is the text for paragraph one
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <PullQuote
    caption="Katie Glass"
    content="Some pull quote"
  />
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
</View>
`;

exports[`4. renders the bold tag 1`] = `
<Text
  style={
    Object {
      "fontWeight": "bold",
    }
  }
>
  some text here
</Text>
`;

exports[`5. renders the italic tag 1`] = `
<Text
  style={
    Object {
      "fontStyle": "italic",
    }
  }
>
   some more text here
</Text>
`;

exports[`6. renders the span tag 1`] = `
<Text>
  some other text here
</Text>
`;

exports[`7. renders the line break tag 1`] = `
<Text>
  

</Text>
`;

exports[`8. renders a mixture of tags 1`] = `
<View>
  <View>
    <Text>
      some link here
    </Text>
  </View>
  <View>
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      some text here
    </Text>
  </View>
  <View>
    <Text
      style={
        Object {
          "fontStyle": "italic",
        }
      }
    >
       some more text here
    </Text>
  </View>
  <View>
    <Text>
      some other text here
    </Text>
  </View>
</View>
`;

exports[`9. renders tags nested 1`] = `
<Text>
  Some text is here 
  <Text>
    and there is some 
    <Text>
      more text 
      <Text>
        and in here
      </Text>
    </Text>
     after it too
  </Text>
   and here
</Text>
`;

exports[`10. renders wrapped tags 1`] = `
<Text>
  Camilla Long is 
  <Text
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    the Sunday Times
  </Text>
   film critic. She also writes interviews and a column, and was named 
  <Text
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    interviewer of the year
  </Text>
   at the British Press Awards in 2010 and 2016.
</Text>
`;

exports[`11. renders multiple children 1`] = `
<Text
  style={
    Object {
      "color": "red",
    }
  }
>
  <Text>
    This is the text for paragraph one
  </Text>
  <Text>
    This is the text for paragraph two
  </Text>
</Text>
`;

exports[`12. does not render a script tag 1`] = `<View />`;

exports[`13. does not render an image tag 1`] = `<View />`;
